<resources>
    <string name="app_name">GpsTrackerCurse</string>
    <string name="home">Home</string>
    <string name="tracks">Tracks</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="update_time">Update time</string>
    <string name="update_time_summary">Location update time.</string>
    <string name="track_color">Track color</string>
    <string name="track_color_summary">Choose Track color.</string>
    <string name="location_disables">Location disabled</string>
    <string name="location_dialog_message">Do you want enable GPS?</string>
</resources>